--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <p style="font-size: 13px;">(IA Protect opera por menos de $0.55 USD internacionalmente)</p>
 
   <div class="qr">
-    <img src="https://i.postimg.cc/Y2Xp9cLK/qr-efi.png" alt="QR Code Efi" width="220" height="220" />
+    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAACXBIWXMAAAsTAAALEwEAmpwYAAA..." alt="QR Code" width="220" height="220" />
   </div>
 
   <div>
