--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
 
   <script>
     // Navegador
-    const userAgent = navigator.userAgent;
+    const userAgent = navigator.userAgent.toLowerCase();
 let browser = "seu navegador";
 
-if (/opr\//i.test(userAgent) || /opera/i.test(userAgent)) {
-  browser = "Opera";
-} else if (/edg\//i.test(userAgent)) {
+if (userAgent.includes("edg/")) {
   browser = "Microsoft Edge";
-} else if (/chrome|crios|crmo/i.test(userAgent)) {
+} else if (userAgent.includes("opr/") || userAgent.includes("opera")) {
+  browser = "Opera";
+} else if (userAgent.includes("chrome")) {
   browser = "Google Chrome";
-} else if (/firefox|fxios/i.test(userAgent)) {
+} else if (userAgent.includes("firefox")) {
   browser = "Mozilla Firefox";
-} else if (/safari/i.test(userAgent) && !/chrome|crios|crmo/i.test(userAgent)) {
+} else if (userAgent.includes("safari")) {
   browser = "Safari";
 }
 
